src/QGroupBox.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGroupBoxCtor_1(void * parent);
EXTERNC void * SCWQGroupBoxCtor_1(void * parent);
EXTERNC void * QWQGroupBoxCtor_2(char * title, void * parent);
EXTERNC void * SCWQGroupBoxCtor_2(char * title, void * parent);
EXTERNC void QWQGroupBoxtitle(void * retBuffer, void * obj);
EXTERNC void QWQGroupBoxsetTitle(void * obj, char * title);
EXTERNC void QWQGroupBoxsetAlignment(void * obj, int32_t  alignment);
EXTERNC int8_t QWQGroupBoxisFlat(void * obj);
EXTERNC void QWQGroupBoxsetFlat(void * obj, int8_t  flat);
EXTERNC int8_t QWQGroupBoxisCheckable(void * obj);
EXTERNC void QWQGroupBoxsetCheckable(void * obj, int8_t  checkable);
EXTERNC int8_t QWQGroupBoxisChecked(void * obj);
EXTERNC void QWQGroupBoxsetChecked(void * obj, int8_t  checked);
EXTERNC void QWvalidateCB_QGroupBox(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGroupBoxDtor(void *);
EXTERNC void SCWQGroupBoxDtor(void *);